chore(dev): add training default client side filter; add cipher nohost profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -319,6 +319,50 @@ profiles {
     params.pathogenDetection.taxonomicProfile.sylphIndex                      = "$params.databaseDirectory/cipher/sylph/cipher.syldb"
     params.pathogenDetection.taxonomicProfile.sylphMetadata                   = "$params.databaseDirectory/cipher/sylph/metadata.tsv.gz"
 
+    params.pathogenDetection.metagenomeAssembly.contigProfileMethod           = "blast"
+    params.pathogenDetection.metagenomeAssembly.contigProfileIndex            = "$params.databaseDirectory/cipher/blast" 
+    params.pathogenDetection.metagenomeAssembly.contigProfileBlastPrefix      = "cipher"   
+
+    params.resources.memory.metaspades             = "64 GB"
+    params.resources.memory.megahit                = "64 GB"
+    params.resources.memory.metabuli               = "64 GB"
+    params.resources.memory.kraken2                = "768 GB"
+    params.resources.memory.kmcp                   = "256 GB"
+    params.resources.memory.ganon                  = "384 GB"
+    params.resources.memory.sylph                  = "64 GB"
+    params.resources.memory.bracken                = "32 GB"
+    params.resources.memory.vircov                 = "32 GB"
+    params.resources.memory.blast                  = "128 GB"
+
+  }
+
+  cipher_nohost {
+
+    params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/cipher_nohost/taxonomy"
+
+    params.pathogenDetection.taxonomicProfile.classifier                      = true
+    params.pathogenDetection.taxonomicProfile.classifierMethod                = "kraken2 metabuli ganon"
+    params.pathogenDetection.taxonomicProfile.profiler                        = true
+    params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken"
+
+    params.pathogenDetection.taxonomicProfile.alignment                       = true
+    params.pathogenDetection.taxonomicProfile.alignmentMethod                 = "bowtie2"
+    params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/cipher_nohost/vircov/ictv-nohost"
+    params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/cipher_nohost/vircov/ictv-nohost.fasta"
+    params.pathogenDetection.taxonomicProfile.vircovArgs                      = "--remap-exclude-bins 'Homo sapiens'"
+
+    params.pathogenDetection.taxonomicProfile.metabuliIndex                   = "$params.databaseDirectory/cipher_nohost/metabuli"
+    params.pathogenDetection.taxonomicProfile.krakenIndex                     = "$params.databaseDirectory/cipher_nohost/kraken2"
+    params.pathogenDetection.taxonomicProfile.ganonIndex                      = "$params.databaseDirectory/cipher_nohost/ganon"
+    params.pathogenDetection.taxonomicProfile.ganonDatabasePrefix             = "cipher-v3-nohost" // is actually v2 (default manuscript) 
+    params.pathogenDetection.taxonomicProfile.kmcpIndex                       = "$params.databaseDirectory/cipher/kmcp"
+    params.pathogenDetection.taxonomicProfile.sylphIndex                      = "$params.databaseDirectory/cipher/sylph/cipher.syldb"
+    params.pathogenDetection.taxonomicProfile.sylphMetadata                   = "$params.databaseDirectory/cipher/sylph/metadata.tsv.gz"
+
+    params.pathogenDetection.metagenomeAssembly.contigProfileMethod           = "blast"
+    params.pathogenDetection.metagenomeAssembly.contigProfileIndex            = "$params.databaseDirectory/cipher_nohost/blast" 
+    params.pathogenDetection.metagenomeAssembly.contigProfileBlastPrefix      = "cipher-v3-nohost" // is actually v2 (default manuscript) 
+
     params.resources.memory.metaspades             = "64 GB"
     params.resources.memory.megahit                = "64 GB"
     params.resources.memory.metabuli               = "64 GB"
