--- a/nextflow.config
+++ b/nextflow.config
@@ -354,7 +354,7 @@ profiles {
     params.pathogenDetection.taxonomicProfile.metabuliIndex                   = "$params.databaseDirectory/cipher_nohost/metabuli"
     params.pathogenDetection.taxonomicProfile.krakenIndex                     = "$params.databaseDirectory/cipher_nohost/kraken2"
     params.pathogenDetection.taxonomicProfile.ganonIndex                      = "$params.databaseDirectory/cipher_nohost/ganon"
-    params.pathogenDetection.taxonomicProfile.ganonDatabasePrefix             = "cipher-v3-nohost" // is actually v2 (default manuscript) 
+    params.pathogenDetection.taxonomicProfile.ganonDatabasePrefix             = "cipher" 
     params.pathogenDetection.taxonomicProfile.kmcpIndex                       = "$params.databaseDirectory/cipher_nohost/kmcp"
     params.pathogenDetection.taxonomicProfile.sylphIndex                      = "$params.databaseDirectory/cipher_nohost/sylph/cipher.syldb"
     params.pathogenDetection.taxonomicProfile.sylphMetadata                   = "$params.databaseDirectory/cipher_nohost/sylph/metadata.tsv.gz"
