chore(dev): metabuli dev updates; plot updates; ciqa updates

--- a/nextflow.config
+++ b/nextflow.config
@@ -496,7 +496,11 @@ process {
       cpus = params.resources.threads.cerebro 
       memory = params.resources.memory.cerebro
       conda = params.resources.conda.cerebro // dev version
-      
+    }
+    withLabel: cerebroPipeline { 
+      cpus = params.resources.threads.cerebro 
+      memory = params.resources.memory.cerebro
+      // conda = params.resources.conda.cerebro // local version due to update to metabuli
     }
     withLabel: panviralVirusRecovery { 
       cpus = params.resources.threads.vircov 
