chore(dev): dev updates; production config

--- a/nextflow.config
+++ b/nextflow.config
@@ -29,28 +29,16 @@ params {
 
   skipAssembly                        = []
 
-  cerebroProduction {
+  // Production configurations for uploads etc.
 
-    enabled                           = false
-    
-    authConfig  {
-      url                             = "http://api.cerebro.localhost"
-      tokenEnv                        = "CEREBRO_API_TOKEN"
-    }
+  runName                             = null  // cerebro model for production
 
-    fsConfig {
-      enabled                         = false
-      team                            = "CNS"
-    }
-    
-    uploadConfig {
-      enabled                         = true
-      team                            = "CNS"
-      database                        = "CNS"
-      project                         = "Test"
-    }
+  apiUrl                              = "http://api.cerebro.localhost"
+  apiTokenEnv                         = "CEREBRO_API_TOKEN"
 
-  }
+  teamName                            = null
+  databaseName                        = null
+  projectName                         = null 
 
   qualityControl {    
       
@@ -495,12 +483,12 @@ process {
     withLabel: cerebro { 
       cpus = params.resources.threads.cerebro 
       memory = params.resources.memory.cerebro
-      conda = params.resources.conda.cerebro // dev version
+      conda = params.resources.conda.cerebro
     }
     withLabel: cerebroPipeline { 
       cpus = params.resources.threads.cerebro 
       memory = params.resources.memory.cerebro
-      // conda = params.resources.conda.cerebro // local version due to update to metabuli
+      conda = params.resources.conda.cerebro
     }
     withLabel: panviralVirusRecovery { 
       cpus = params.resources.threads.vircov 
@@ -513,11 +501,11 @@ process {
     }
     withLabel: qualityReadScan { 
       cpus = params.resources.threads.cerebro 
-      conda = params.resources.conda.cerebro // dev version
+      conda = params.resources.conda.cerebro
     }
     withLabel: qualityDeduplication { 
       cpus = params.resources.threads.cerebro 
-      conda = params.resources.conda.cerebro // dev version
+      conda = params.resources.conda.cerebro
     }
     withLabel: qualityReadQualityFastp { 
       cpus = params.resources.threads.fastp 
@@ -572,7 +560,7 @@ process {
     withLabel: pathogenProfileMetabuli {  
       cpus = params.resources.threads.metabuli
       memory = params.resources.memory.metabuli 
-      // conda = params.resources.conda.metabuli  // metabuli requires fork local installation
+      // conda = params.resources.conda.metabuli  // metabuli requires local installation
     }
     withLabel: pathogenAssemblyMetaspades {  
       cpus = params.resources.threads.metaspades
