chore(dev): fix config

--- a/nextflow.config
+++ b/nextflow.config
@@ -29,13 +29,11 @@ params {
 
   skipAssembly                        = []
 
-  // Production configurations for uploads etc.
-
-  runName                             = null  // cerebro model for production
+  production                          = false
+  runName                             = null
 
   apiUrl                              = "http://api.cerebro.localhost"
   apiTokenEnv                         = "CEREBRO_API_TOKEN"
-
   teamName                            = null
   databaseName                        = null
   projectName                         = null 
