--- a/nextflow.config
+++ b/nextflow.config
@@ -105,6 +105,9 @@ params {
       sylphMinNumberKmers             = 20
       sylphQueryCompression           = 100
 
+      depleteHostReads                = true
+      depleteHostReadsClassifier      = "kraken2"
+
     }
 
     metagenomeAssembly {         
@@ -239,6 +242,27 @@ params {
       virscrub              = "$baseDir/lib/resources/conda/virscrub.yml"
       blast                 = "$baseDir/lib/resources/conda/blast.yml"
     }
+    apptainer {
+      bracken               = "docker://quay.io/biocontainers/bracken:3.0--h9948957_2"
+      cerebro               = "cerebro-dev.sif"    // apptainer.libraryDir
+      concoct               = "docker://quay.io/biocontainers/concoct:1.1.0--py312h71dcd68_8"
+      fastp                 = "docker://quay.io/biocontainers/fastp:0.23.4--h125f33a_5"
+      nanoq                 = "docker://quay.io/biocontainers/nanoq:0.10.0--hc1c3326_4"
+      kmcp                  = "docker://community.wave.seqera.io/library/kmcp_seqkit:6126649d25e23d0d"
+      ganon                 = "docker://quay.io/biocontainers/ganon:2.1.0--py310h21bbc02_2"
+      kraken2               = "docker://quay.io/biocontainers/kraken2:2.1.3--pl5321h077b44d_4"
+      megahit               = "docker://quay.io/biocontainers/megahit:1.2.9--haf24da9_8"
+      metabuli              = "metabuli-dev.sif"   // apptainer.libraryDir
+      metaspades            = "docker://quay.io/biocontainers/spades:4.0.0--haf24da9_4"
+      minimap2              = "docker://community.wave.seqera.io/library/minimap2_samtools:03e1e7cf6ec6695d"
+      metabat2              = "docker://quay.io/biocontainers/metabat2:2.17--h6f16272_1"
+      scrubby               = "scrubby-dev.sif"    // apptainer.libraryDir
+      sylph                 = "docker://community.wave.seqera.io/library/sylph_pandas:ed148ea829c020bb"
+      semibin2              = "docker://quay.io/biocontainers/semibin:2.1.0--pyhdfd78af_0"
+      vircov                = "vircov-dev.sif"     // apptainer.libraryDir
+      virscrub              = "virscrub-dev.sif"   // apptainer.libraryDir
+      blast                 = "docker://quay.io/biocontainers/blast:2.16.0--h66d330f_5"
+    }
   }
 }
 
@@ -250,6 +274,13 @@ profiles {
   mamba {
     conda.enabled = true
     conda.useMamba = true
+  }
+  apptainer {
+    apptainer.enabled                       = true
+    apptainer.libraryDir                    = null
+    apptainer.cacheDir                      = null
+    apptainer.runOptions                    = null
+
   }
 
   panviral {
@@ -452,6 +483,10 @@ profiles {
       executor.$local.memory = '1912 GB'
   }
   dgx {
+    params.apptainer.libraryDir                    = "$HOME/src/apptainer"
+    params.apptainer.cacheDir                      = "$HOME/.apptainer/cache"
+    params.apptainer.runOptions                    = "--bind /raid:/raid"
+
     params.resources.threads.fastp                 = 16
     params.resources.threads.scrubby               = 16
     params.resources.threads.vircov                = 32
@@ -482,114 +517,139 @@ process {
       cpus = params.resources.threads.cerebro 
       memory = params.resources.memory.cerebro
       conda = params.resources.conda.cerebro
+      container = params.resources.apptainer.cerebro
     }
     withLabel: cerebroPipeline { 
       cpus = params.resources.threads.cerebro 
       memory = params.resources.memory.cerebro
       conda = params.resources.conda.cerebro
+      container = params.resources.apptainer.cerebro
     }
     withLabel: panviralVirusRecovery { 
       cpus = params.resources.threads.vircov 
       memory = params.resources.memory.vircov
       conda = params.resources.conda.vircov
+      container = params.resources.apptainer.vircov
     }
     withLabel: panviralVirusTools { 
       cpus = 1
       conda = params.resources.conda.vircov
+      container = params.resources.apptainer.vircov
     }
     withLabel: qualityReadScan { 
       cpus = params.resources.threads.cerebro 
       conda = params.resources.conda.cerebro
+      container = params.resources.apptainer.cerebro
     }
     withLabel: qualityDeduplication { 
       cpus = params.resources.threads.cerebro 
       conda = params.resources.conda.cerebro
+      container = params.resources.apptainer.cerebro
     }
     withLabel: qualityReadQualityFastp { 
       cpus = params.resources.threads.fastp 
       conda = params.resources.conda.fastp
+      container = params.resources.apptainer.fastp
     }
     withLabel: qualityReadQualityNanoq { 
       cpus = params.resources.threads.nanoq 
       conda = params.resources.conda.nanoq
+      container = params.resources.apptainer.nanoq
     }
     withLabel: qualityHostDepletion { 
       cpus = params.resources.threads.scrubby 
       conda = params.resources.conda.scrubby
+      container = params.resources.apptainer.scrubby
     }
     withLabel: qualityInternalControls { 
       cpus = params.resources.threads.vircov 
       conda = params.resources.conda.virscrub
+      container = params.resources.apptainer.vircscrub
     }
     withLabel: qualityBackgroundDepletion { 
       cpus = params.resources.threads.vircov 
       conda = params.resources.conda.virscrub
+      container = params.resources.apptainer.virscrub
     }
     withLabel: pathogenProfileVircov {
       cpus = params.resources.threads.vircov 
       memory = params.resources.memory.vircov
       conda = params.resources.conda.vircov
+      container = params.resources.apptainer.vircov
     }
     withLabel: pathogenProfileKraken2 { 
       cpus = params.resources.threads.kraken2 
       memory = params.resources.memory.kraken2
       conda = params.resources.conda.kraken2
+      container = params.resources.apptainer.kraken2
     }
     withLabel: pathogenProfileBracken { 
       cpus = params.resources.threads.bracken 
       memory = params.resources.memory.bracken
       conda = params.resources.conda.bracken
+      container = params.resources.apptainer.bracken
     }
     withLabel: pathogenProfileSylph { 
       cpus = params.resources.threads.sylph 
       memory = params.resources.memory.sylph 
       conda = params.resources.conda.sylph
+      container = params.resources.apptainer.sylph
     }
     withLabel: pathogenProfileKmcp { 
       cpus = params.resources.threads.kmcp 
       memory = params.resources.memory.kmcp 
       conda = params.resources.conda.kmcp
+      container = params.resources.apptainer.kmcp
     }
     withLabel: pathogenProfileGanon { 
       cpus = params.resources.threads.ganon 
       memory = params.resources.memory.ganon 
       conda = params.resources.conda.ganon
+      container = params.resources.apptainer.ganon
     }
     withLabel: pathogenProfileMetabuli {  
       cpus = params.resources.threads.metabuli
       memory = params.resources.memory.metabuli 
-      // conda = params.resources.conda.metabuli  // metabuli requires local installation
+      conda = params.resources.conda.metabuli
+      container = params.resources.apptainer.metabuli
     }
     withLabel: pathogenAssemblyMetaspades {  
       cpus = params.resources.threads.metaspades
       memory = params.resources.memory.metaspades 
       conda = params.resources.conda.metaspades
+      container = params.resources.apptainer.metaspades
     }
     withLabel: pathogenAssemblyMegahit {  
       cpus = params.resources.threads.megahit
       memory = params.resources.memory.megahit 
       conda = params.resources.conda.megahit
-      time = "2h"
+      container = params.resources.apptainer.megahit
+      time = "4h"
     }
     withLabel: pathogenAssemblyContigCoverage {  
       cpus = params.resources.threads.minimap2
       conda = params.resources.conda.minimap2
+      container = params.resources.apptainer.minimap2
     }
     withLabel: pathogenAssemblyConcoct {  
       cpus = params.resources.threads.concoct
       conda = params.resources.conda.concoct
+      container = params.resources.apptainer.concoct
     }
     withLabel: pathogenAssemblyMetabat2 {  
       cpus = params.resources.threads.metabat2
       conda = params.resources.conda.metabat2
+      container = params.resources.apptainer.metabat2
     }
     withLabel: pathogenAssemblySemiBin2 {  
       cpus = params.resources.threads.semibin2
       conda = params.resources.conda.semibin2
+      container = params.resources.apptainer.semibin2
     }
     withLabel: pathogenAssemblyBlast {  
       cpus = params.resources.threads.blast
       memory = params.resources.memory.blast 
       conda = params.resources.conda.blast
+      container = params.resources.apptainer.blast
     }
 }
