chore: Fix apptainer container definition

--- a/nextflow.config
+++ b/nextflow.config
@@ -557,17 +557,17 @@ process {
       container = params.resources.apptainer.nanoq
     }
     withLabel: qualityHostDepletion { 
-      cpus = params.resources.threads.scrubby 
+      cpus = params.resources.threads.scrubby
       conda = params.resources.conda.scrubby
       container = params.resources.apptainer.scrubby
     }
     withLabel: qualityInternalControls { 
-      cpus = params.resources.threads.vircov 
+      cpus = params.resources.threads.vircov
       conda = params.resources.conda.virscrub
-      container = params.resources.apptainer.vircscrub
+      container = params.resources.apptainer.virscrub
     }
     withLabel: qualityBackgroundDepletion { 
-      cpus = params.resources.threads.vircov 
+      cpus = params.resources.threads.vircov
       conda = params.resources.conda.virscrub
       container = params.resources.apptainer.virscrub
     }
