chore: Fix apptainer DGX configuration

--- a/nextflow.config
+++ b/nextflow.config
@@ -483,9 +483,9 @@ profiles {
       executor.$local.memory = '1912 GB'
   }
   dgx {
-    params.apptainer.libraryDir                    = "$HOME/src/apptainer"
-    params.apptainer.cacheDir                      = "$HOME/.apptainer/cache"
-    params.apptainer.runOptions                    = "--bind /raid:/raid"
+    apptainer.libraryDir                           = "$HOME/src/apptainer"
+    apptainer.cacheDir                             = "$HOME/.apptainer/cache"
+    apptainer.runOptions                           = "--bind /raid:/raid"
 
     params.resources.threads.fastp                 = 16
     params.resources.threads.scrubby               = 16
