chore: Fix config for SLURM

--- a/lib/resources/slurm.config
+++ b/lib/resources/slurm.config
@@ -4,10 +4,10 @@
  */
 
 params {
-    slurmPartition = null
-    slurmAccount = null
-    slurmQos = null
-    slurmGpu = null
+  slurmPartition = null
+  slurmAccount   = null
+  slurmQos       = null
+  slurmGpu       = null     // integer or string like "1"
 }
 
 profiles {
@@ -16,46 +16,50 @@ profiles {
 
     process.executor = 'slurm'
 
+    // Executor-specific configuration
     executor {
-      name            = 'slurm'
-      queueSize       = 100            // max concurrently SUBMITTED jobs (not total tasks)
-      pollInterval    = '20 sec'
-      submitRateLimit = '10/second'    // slow down bursts on busy schedulers
+      $slurm {
+        queueSize       = 100
+        pollInterval    = '20 sec'
+        submitRateLimit = '10/second'
+
+        // Optional but often recommended on HPC:
+        // queueStatInterval = '2 min'
+      }
     }
 
     process {
 
-      // Nextflow maps `queue` to the scheduler partition concept
-      queue  = null
+      if( params.slurmPartition )
+        queue = params.slurmPartition
 
-      // Retries due to transient file system hiccups and flaky nodes
-      errorStrategy = { (task.exitStatus in [143,137] ? 'retry' : 'terminate') } // SIGTERM/OOM-kill-ish cases
+      errorStrategy = { (task.exitStatus in [143,137] ? 'retry' : 'terminate') }
       maxRetries    = 2
       maxErrors     = 20
 
-      // If cluster hates job floods, also cap local task fan-out:
-      // maxForks = 8   // per-process cap (optional)
-
-      // Do not duplicate settings that you already set via directives
-      // e.g. do not specify `--partition=...` here if you use directive `queue = ...`
-      clusterOptions = []
-
-      // Nextflow will still capture stdout/stderr, this is for SLURM log files:
-      clusterOptions = (clusterOptions + [
+      def opts = [
         '--output=slurm-%x-%j.out',
         '--error=slurm-%x-%j.err'
-      ])
-
+      ]
 
       if( params.slurmAccount )
-        clusterOptions = (clusterOptions + ["--account=${params.slurmAccount}"])
+        opts << "--account=${params.slurmAccount}"
       if( params.slurmQos )
-        clusterOptions = (clusterOptions + ["--qos=${params.slurmQos}"])
-      if( params.slurmPartition )
-        clusterOptions = (clusterOptions + ["--partition=${params.slurmPartition}"])
+        opts << "--qos=${params.slurmQos}"
       if( params.slurmGpu )
-        clusterOptions = (clusterOptions + ["--gres=gpu:${params.slurmGpu}"])
-        runOptions = "--nv"
+        opts << "--gres=gpu:${params.slurmGpu}"
+
+      // clusterOptions can be a string list in Nextflow 24.04+
+      clusterOptions = opts
+    }
+
+    // If you use Apptainer/Singularity for GPU passthrough:
+    apptainer {
+      enabled    = true
+      autoMounts = true
+      // Only enable --nv if you actually intend to run GPU containers
+      if( params.slurmGpu )
+        runOptions = '--nv'
     }
   }
 }
