--- a/nextflow.config
+++ b/nextflow.config
@@ -275,12 +275,12 @@ profiles {
     conda.enabled = true
     conda.useMamba = true
   }
+
   apptainer {
     apptainer.enabled                       = true
     apptainer.libraryDir                    = null
     apptainer.cacheDir                      = null
     apptainer.runOptions                    = null
-
   }
 
   panviral {
@@ -486,6 +486,10 @@ profiles {
     apptainer.libraryDir                           = "$HOME/src/apptainer"
     apptainer.cacheDir                             = "$HOME/.apptainer/cache"
     apptainer.runOptions                           = "--bind /raid:/raid"
+
+    if( params.slurmGpu ) {
+      apptainer.runOptions = "${apptainer.runOptions} --nv"
+    }
 
     params.resources.threads.fastp                 = 16
     params.resources.threads.scrubby               = 16
