chore: Fix config for SLURM

--- a/lib/resources/slurm.config
+++ b/lib/resources/slurm.config
@@ -49,17 +49,13 @@ profiles {
       if( params.slurmGpu )
         opts << "--gres=gpu:${params.slurmGpu}"
 
-      // clusterOptions can be a string list in Nextflow 24.04+
       clusterOptions = opts
     }
 
-    // If you use Apptainer/Singularity for GPU passthrough:
     apptainer {
-      enabled    = true
-      autoMounts = true
-      // Only enable --nv if you actually intend to run GPU containers
-      if( params.slurmGpu )
-        runOptions = '--nv'
+      if( params.slurmGpu ) {
+        apptainer.runOptions = "${apptainer.runOptions} --nv"
+      }
     }
   }
 }
