chore: Fix config for SLURM

--- a/lib/resources/slurm.config
+++ b/lib/resources/slurm.config
@@ -4,7 +4,7 @@
  */
 
 params {
-  slurmPartition = null
+  slurmPartition = 'work'
   slurmAccount   = null
   slurmQos       = null
   slurmGpu       = null     // integer or string like "1"
@@ -16,7 +16,6 @@ profiles {
 
     process.executor = 'slurm'
 
-    // Executor-specific configuration
     executor {
       $slurm {
         queueSize       = 100
