--- a/nextflow.config
+++ b/nextflow.config
@@ -507,6 +507,45 @@ profiles {
     params.resources.threads.blast                 = 32
   }
 
+  slurm {
+
+    process.executor = 'slurm'
+
+    executor {
+      $slurm {
+        queueSize       = 100
+        pollInterval    = '20 sec'
+        submitRateLimit = '10/second'
+
+        // Optional but often recommended on HPC:
+        // queueStatInterval = '2 min'
+      }
+    }
+
+    process {
+
+      if( params.slurmPartition )
+        queue = params.slurmPartition
+
+      errorStrategy = { (task.exitStatus in [143,137] ? 'retry' : 'terminate') }
+      maxRetries    = 2
+      maxErrors     = 20
+
+      def opts = [
+        '--output=slurm-%x-%j.out',
+        '--error=slurm-%x-%j.err'
+      ]
+
+      if( params.slurmAccount )
+        opts << "--account=${params.slurmAccount}"
+      if( params.slurmQos )
+        opts << "--qos=${params.slurmQos}"
+      if( params.slurmGpu )
+        opts << "--gres=gpu:${params.slurmGpu}"
+
+      clusterOptions = opts
+    }
+  }
 }
 
 process {
