chore: Fix config for SLURM

--- a/nextflow.config
+++ b/nextflow.config
@@ -38,6 +38,11 @@ params {
   databaseName                        = null
   projectName                         = null 
 
+  slurmPartition                      = 'work'
+  slurmAccount                        = null
+  slurmQos                            = null
+  slurmGpu                            = null     // integer or string like "1"
+
   qualityControl {    
       
       readQuality                     = true
