chore: Check label configuration in SLURM executor

--- a/nextflow.config
+++ b/nextflow.config
@@ -41,7 +41,7 @@ params {
   slurmPartition                      = 'work'
   slurmAccount                        = null
   slurmQos                            = null
-  slurmGpu                            = null     // integer or string like "1"
+  slurmGpu                            = null     
 
   qualityControl {    
       
@@ -269,6 +269,152 @@ params {
       blast                 = "docker://quay.io/biocontainers/blast:2.16.0--h66d330f_5"
     }
   }
+}
+
+
+process {
+
+    errorStrategy = "ignore"
+
+    withLabel: cerebro { 
+      cpus = params.resources.threads.cerebro 
+      memory = params.resources.memory.cerebro
+      conda = params.resources.conda.cerebro
+      container = params.resources.apptainer.cerebro
+    }
+    withLabel: cerebroPipeline { 
+      cpus = params.resources.threads.cerebro 
+      memory = params.resources.memory.cerebro
+      conda = params.resources.conda.cerebro
+      container = params.resources.apptainer.cerebro
+    }
+    withLabel: panviralVirusRecovery { 
+      cpus = params.resources.threads.vircov 
+      memory = params.resources.memory.vircov
+      conda = params.resources.conda.vircov
+      container = params.resources.apptainer.vircov
+    }
+    withLabel: panviralVirusTools { 
+      cpus = 1
+      conda = params.resources.conda.vircov
+      container = params.resources.apptainer.vircov
+    }
+    withLabel: qualityReadScan { 
+      cpus = params.resources.threads.cerebro 
+      conda = params.resources.conda.cerebro
+      container = params.resources.apptainer.cerebro
+    }
+    withLabel: qualityDeduplication { 
+      cpus = params.resources.threads.cerebro 
+      conda = params.resources.conda.cerebro
+      container = params.resources.apptainer.cerebro
+    }
+    withLabel: qualityReadQualityFastp { 
+      cpus = params.resources.threads.fastp 
+      conda = params.resources.conda.fastp
+      container = params.resources.apptainer.fastp
+    }
+    withLabel: qualityReadQualityNanoq { 
+      cpus = params.resources.threads.nanoq 
+      conda = params.resources.conda.nanoq
+      container = params.resources.apptainer.nanoq
+    }
+    withLabel: qualityHostDepletion { 
+      cpus = params.resources.threads.scrubby
+      conda = params.resources.conda.scrubby
+      container = params.resources.apptainer.scrubby
+    }
+    withLabel: qualityInternalControls { 
+      cpus = params.resources.threads.vircov
+      conda = params.resources.conda.virscrub
+      container = params.resources.apptainer.virscrub
+    }
+    withLabel: qualityBackgroundDepletion { 
+      cpus = params.resources.threads.vircov
+      conda = params.resources.conda.virscrub
+      container = params.resources.apptainer.virscrub
+    }
+    withLabel: pathogenProfileVircov {
+      cpus = params.resources.threads.vircov 
+      memory = params.resources.memory.vircov
+      conda = params.resources.conda.vircov
+      container = params.resources.apptainer.vircov
+    }
+    withLabel: pathogenProfileKraken2 { 
+      cpus = params.resources.threads.kraken2 
+      memory = params.resources.memory.kraken2
+      conda = params.resources.conda.kraken2
+      container = params.resources.apptainer.kraken2
+    }
+    withLabel: pathogenProfileBracken { 
+      cpus = params.resources.threads.bracken 
+      memory = params.resources.memory.bracken
+      conda = params.resources.conda.bracken
+      container = params.resources.apptainer.bracken
+    }
+    withLabel: pathogenProfileSylph { 
+      cpus = params.resources.threads.sylph 
+      memory = params.resources.memory.sylph 
+      conda = params.resources.conda.sylph
+      container = params.resources.apptainer.sylph
+    }
+    withLabel: pathogenProfileKmcp { 
+      cpus = params.resources.threads.kmcp 
+      memory = params.resources.memory.kmcp 
+      conda = params.resources.conda.kmcp
+      container = params.resources.apptainer.kmcp
+    }
+    withLabel: pathogenProfileGanon { 
+      cpus = params.resources.threads.ganon 
+      memory = params.resources.memory.ganon 
+      conda = params.resources.conda.ganon
+      container = params.resources.apptainer.ganon
+    }
+    withLabel: pathogenProfileMetabuli {  
+      cpus = params.resources.threads.metabuli
+      memory = params.resources.memory.metabuli 
+      conda = params.resources.conda.metabuli
+      container = params.resources.apptainer.metabuli
+    }
+    withLabel: pathogenAssemblyMetaspades {  
+      cpus = params.resources.threads.metaspades
+      memory = params.resources.memory.metaspades 
+      conda = params.resources.conda.metaspades
+      container = params.resources.apptainer.metaspades
+    }
+    withLabel: pathogenAssemblyMegahit {  
+      cpus = params.resources.threads.megahit
+      memory = params.resources.memory.megahit 
+      conda = params.resources.conda.megahit
+      container = params.resources.apptainer.megahit
+      time = "4h"
+    }
+    withLabel: pathogenAssemblyContigCoverage {  
+      cpus = params.resources.threads.minimap2
+      conda = params.resources.conda.minimap2
+      container = params.resources.apptainer.minimap2
+    }
+    withLabel: pathogenAssemblyConcoct {  
+      cpus = params.resources.threads.concoct
+      conda = params.resources.conda.concoct
+      container = params.resources.apptainer.concoct
+    }
+    withLabel: pathogenAssemblyMetabat2 {  
+      cpus = params.resources.threads.metabat2
+      conda = params.resources.conda.metabat2
+      container = params.resources.apptainer.metabat2
+    }
+    withLabel: pathogenAssemblySemiBin2 {  
+      cpus = params.resources.threads.semibin2
+      conda = params.resources.conda.semibin2
+      container = params.resources.apptainer.semibin2
+    }
+    withLabel: pathogenAssemblyBlast {  
+      cpus = params.resources.threads.blast
+      memory = params.resources.memory.blast 
+      conda = params.resources.conda.blast
+      container = params.resources.apptainer.blast
+    }
 }
 
 profiles {
@@ -551,149 +697,4 @@ profiles {
       clusterOptions = opts
     }
   }
-}
-
-process {
-
-    errorStrategy = "ignore"
-
-    withLabel: cerebro { 
-      cpus = params.resources.threads.cerebro 
-      memory = params.resources.memory.cerebro
-      conda = params.resources.conda.cerebro
-      container = params.resources.apptainer.cerebro
-    }
-    withLabel: cerebroPipeline { 
-      cpus = params.resources.threads.cerebro 
-      memory = params.resources.memory.cerebro
-      conda = params.resources.conda.cerebro
-      container = params.resources.apptainer.cerebro
-    }
-    withLabel: panviralVirusRecovery { 
-      cpus = params.resources.threads.vircov 
-      memory = params.resources.memory.vircov
-      conda = params.resources.conda.vircov
-      container = params.resources.apptainer.vircov
-    }
-    withLabel: panviralVirusTools { 
-      cpus = 1
-      conda = params.resources.conda.vircov
-      container = params.resources.apptainer.vircov
-    }
-    withLabel: qualityReadScan { 
-      cpus = params.resources.threads.cerebro 
-      conda = params.resources.conda.cerebro
-      container = params.resources.apptainer.cerebro
-    }
-    withLabel: qualityDeduplication { 
-      cpus = params.resources.threads.cerebro 
-      conda = params.resources.conda.cerebro
-      container = params.resources.apptainer.cerebro
-    }
-    withLabel: qualityReadQualityFastp { 
-      cpus = params.resources.threads.fastp 
-      conda = params.resources.conda.fastp
-      container = params.resources.apptainer.fastp
-    }
-    withLabel: qualityReadQualityNanoq { 
-      cpus = params.resources.threads.nanoq 
-      conda = params.resources.conda.nanoq
-      container = params.resources.apptainer.nanoq
-    }
-    withLabel: qualityHostDepletion { 
-      cpus = params.resources.threads.scrubby
-      conda = params.resources.conda.scrubby
-      container = params.resources.apptainer.scrubby
-    }
-    withLabel: qualityInternalControls { 
-      cpus = params.resources.threads.vircov
-      conda = params.resources.conda.virscrub
-      container = params.resources.apptainer.virscrub
-    }
-    withLabel: qualityBackgroundDepletion { 
-      cpus = params.resources.threads.vircov
-      conda = params.resources.conda.virscrub
-      container = params.resources.apptainer.virscrub
-    }
-    withLabel: pathogenProfileVircov {
-      cpus = params.resources.threads.vircov 
-      memory = params.resources.memory.vircov
-      conda = params.resources.conda.vircov
-      container = params.resources.apptainer.vircov
-    }
-    withLabel: pathogenProfileKraken2 { 
-      cpus = params.resources.threads.kraken2 
-      memory = params.resources.memory.kraken2
-      conda = params.resources.conda.kraken2
-      container = params.resources.apptainer.kraken2
-    }
-    withLabel: pathogenProfileBracken { 
-      cpus = params.resources.threads.bracken 
-      memory = params.resources.memory.bracken
-      conda = params.resources.conda.bracken
-      container = params.resources.apptainer.bracken
-    }
-    withLabel: pathogenProfileSylph { 
-      cpus = params.resources.threads.sylph 
-      memory = params.resources.memory.sylph 
-      conda = params.resources.conda.sylph
-      container = params.resources.apptainer.sylph
-    }
-    withLabel: pathogenProfileKmcp { 
-      cpus = params.resources.threads.kmcp 
-      memory = params.resources.memory.kmcp 
-      conda = params.resources.conda.kmcp
-      container = params.resources.apptainer.kmcp
-    }
-    withLabel: pathogenProfileGanon { 
-      cpus = params.resources.threads.ganon 
-      memory = params.resources.memory.ganon 
-      conda = params.resources.conda.ganon
-      container = params.resources.apptainer.ganon
-    }
-    withLabel: pathogenProfileMetabuli {  
-      cpus = params.resources.threads.metabuli
-      memory = params.resources.memory.metabuli 
-      conda = params.resources.conda.metabuli
-      container = params.resources.apptainer.metabuli
-    }
-    withLabel: pathogenAssemblyMetaspades {  
-      cpus = params.resources.threads.metaspades
-      memory = params.resources.memory.metaspades 
-      conda = params.resources.conda.metaspades
-      container = params.resources.apptainer.metaspades
-    }
-    withLabel: pathogenAssemblyMegahit {  
-      cpus = params.resources.threads.megahit
-      memory = params.resources.memory.megahit 
-      conda = params.resources.conda.megahit
-      container = params.resources.apptainer.megahit
-      time = "4h"
-    }
-    withLabel: pathogenAssemblyContigCoverage {  
-      cpus = params.resources.threads.minimap2
-      conda = params.resources.conda.minimap2
-      container = params.resources.apptainer.minimap2
-    }
-    withLabel: pathogenAssemblyConcoct {  
-      cpus = params.resources.threads.concoct
-      conda = params.resources.conda.concoct
-      container = params.resources.apptainer.concoct
-    }
-    withLabel: pathogenAssemblyMetabat2 {  
-      cpus = params.resources.threads.metabat2
-      conda = params.resources.conda.metabat2
-      container = params.resources.apptainer.metabat2
-    }
-    withLabel: pathogenAssemblySemiBin2 {  
-      cpus = params.resources.threads.semibin2
-      conda = params.resources.conda.semibin2
-      container = params.resources.apptainer.semibin2
-    }
-    withLabel: pathogenAssemblyBlast {  
-      cpus = params.resources.threads.blast
-      memory = params.resources.memory.blast 
-      conda = params.resources.conda.blast
-      container = params.resources.apptainer.blast
-    }
 }
